--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,10 @@ body {
 .App {
 	text-align: center;
 }
+.link {
+  padding: 20px 30px;
+  font-family: 'Arial Rounded MT Bold';
+  font-size: 50px;
+  font-weight: bolder;
+  color: black;
+}
